--- a/clientes.html
+++ b/clientes.html
@@ -89,40 +89,8 @@
       </div>
     </nav>
 
-    <main class="pt-5 bg-gradient-blue-green">
-      <div class="container">
-        <section class="row text-white align-items-lg-center">
-          <article class="col-12 col-lg-5">
-            <h2>Necesitas un increible sitio web?</h2>
-            <p class="fs-5">
-              Un sitio hermoso, moderno, responsivo y personalizado para tu
-              compañia, negocio, marca, servicio o producto
-            </p>
-            <a class="btn btn-success btn-lg fw-bold" href="#servicios">EMPECEMOS!</a>
-          </article>
-          <article class="col-12 col-lg-7">
-            <img
-              class="img-fluid"
-              src="./img/header-image.png"
-              alt="necesitas un increible sitio web?"
-            />
-          </article>
-          <article class="col-12 col-lg-5 order-lg-1">
-            <h2>Sitios web responsivos</h2>
-            <p class="fs-5">
-              Es importante proporcionar a tus visitantes una experiencia web
-              óptima en dispositivos móviles. El diseño web responsivo significa
-              que tu sitio se adapta instantáneamente al dispositivo que el
-              visitante utiliza. ¡Mi trabajo es hacer, que la visita de tus
-              usuarios sea lo más agradable e intuitiva para ellos!
-            </p>
-          </article>
-          <article class="col-12 col-lg-7">
-            <img class="img-fluid" src="./img/header-image-2.png" alt="sitios web responsivos" />
-          </article>
-        </section>
-        <section class="row" id="servicios"></section>
-      </div>
+    <main class="pt-5">
+      <h1>Seccion Clientes</h1>
     </main>
 
     <footer class="bg-dark p-3 fixed-bottom">
