--- a/index.html
+++ b/index.html
@@ -91,14 +91,16 @@
 
     <main class="pt-5 bg-gradient-blue-green">
       <div class="container">
-        <section class="row text-white align-items-lg-center">
+        <section class="row text-white align-items-lg-center mb-5">
           <article class="col-12 col-lg-5">
             <h2>Necesitas un increible sitio web?</h2>
             <p class="fs-5">
               Un sitio hermoso, moderno, responsivo y personalizado para tu
               compañia, negocio, marca, servicio o producto
             </p>
-            <a class="btn btn-success btn-lg fw-bold" href="#servicios">EMPECEMOS!</a>
+            <a class="btn btn-success btn-lg fw-bold" href="#servicios"
+              >EMPECEMOS!</a
+            >
           </article>
           <article class="col-12 col-lg-7">
             <img
@@ -118,14 +120,75 @@
             </p>
           </article>
           <article class="col-12 col-lg-7">
-            <img class="img-fluid" src="./img/header-image-2.png" alt="sitios web responsivos" />
+            <img
+              class="img-fluid"
+              src="./img/header-image-2.png"
+              alt="sitios web responsivos"
+            />
           </article>
         </section>
-        <section class="row" id="servicios"></section>
+        <section class="row align-items-lg-center min-vh-100" id="servicios">
+          <article class="col-12 col-md-6 col-lg-3 d-flex">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+              <img src="./img/icon-sites.png" class="card-img-top bg-third-color" alt="nuevo sitio web" />
+              <div class="card-body">
+                <h5 class="card-title">Nuevo sitio web</h5>
+                <p class="card-text">
+                  Necesitas un nuevo sitio web 100% responsivo?
+                </p>
+                <a href="sitios.html" class="text-third">Mas detalles
+                  <i class="bi bi-chevron-compact-right"></i>
+                </a>
+              </div>
+            </div>
+          </article>
+          <article class="col-12 col-md-6 col-lg-3 d-flex">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+              <img src="./img/icon-clients.png" class="card-img-top bg-third-color" alt="clientes" />
+              <div class="card-body">
+                <h5 class="card-title">Clientes</h5>
+                <p class="card-text">
+                  Clientes felices y proyectos hermosos.
+                </p>
+                <a href="clientes.html" class="text-third">Mas detalles
+                  <i class="bi bi-chevron-compact-right"></i>
+                </a>
+              </div>
+            </div>
+          </article>
+          <article class="col-12 col-md-6 col-lg-3 d-flex">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+              <img src="./img/icon-workflow.png" class="card-img-top bg-third-color" alt="flujo de trabajo" />
+              <div class="card-body">
+                <h5 class="card-title">Flujo de trabajo</h5>
+                <p class="card-text">
+                  Escucho tus necesidades, discutamos tu proyecto
+                </p>
+                <a href="comencemos.html" class="text-third">Mas detalles
+                  <i class="bi bi-chevron-compact-right"></i>
+                </a>
+              </div>
+            </div>
+          </article>
+          <article class="col-12 col-md-6 col-lg-3 d-flex">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+              <img src="./img/icon-about.png" class="card-img-top bg-third-color" alt="interesado" />
+              <div class="card-body">
+                <h5 class="card-title">Interesado?</h5>
+                <p class="card-text">
+                  Comencemos con tu nuevo proyecto
+                </p>
+                <a href="contacto.html" class="text-third">Mas detalles
+                  <i class="bi bi-chevron-compact-right"></i>
+                </a>
+              </div>
+            </div>
+          </article>
+        </section>
       </div>
     </main>
 
-    <footer class="bg-dark p-3 fixed-bottom">
+    <footer class="bg-dark p-3">
       <div class="container text-center">
         <nav class="d-flex justify-content-evenly">
           <a href="https://facebook.com" target="_blank"
