--- a/sitios.html
+++ b/sitios.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Studio BAD DOG</title>
+    <title>Tipos de Sitios Web</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -89,8 +89,169 @@
       </div>
     </nav>
 
-    <main class="pt-5">
-      <h1>Seccion Sitios</h1>
+    <main class="pt-5 bg-color">
+      <section id="ultimos-proyectos" class="pb-5">
+        <div class="text-center">
+          <h1>Sitios Web 100% Responsivos</h1>
+          <p class="fs-5">
+            Desarrollo sitios de una sola y de multiples paginas
+          </p>
+        </div>
+        <div
+          id="carouselExampleInterval"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+              <img
+                src="./img/work-slide-1.jpg"
+                class="d-block w-100"
+                alt="Trabajo 1"
+              />
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img
+                src="./img/work-slide-2.jpg"
+                class="d-block w-100"
+                alt="Trabajo 2"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./img/work-slide-3.jpg"
+                class="d-block w-100"
+                alt="Trabajo 3"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./img/work-slide-4.jpg"
+                class="d-block w-100"
+                alt="Trabajo 4"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./img/work-slide-5.png"
+                class="d-block w-100"
+                alt="Trabajo 5"
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+      <section
+        id="single-page"
+        class="min-vh-100 bg-hero-image"
+        style="--bg-image: url(../img/site-singlepage.jpg)"
+      >
+        <article class="bg-alpha-color min-vh-100 d-flex align-items-center">
+          <div class="container">
+            <article class="col-12 col-lg-6 offset-lg-6">
+              <a
+                href="contacto.html"
+                class="btn btn-lg btn-success text-white mb-5"
+              >
+                <b>Desde $400 <small>USD</small></b>
+              </a>
+              <h2>Sitio de una sola pagina</h2>
+              <small>
+                El precio puede ser mas bajo (o mas alto) dependiendo de los
+                requisitos de su proyecto.
+              </small>
+              <p my-5 fs-5>
+                Una <b>sola pagina</b> o <b>pagina de destino</b> es un sitio
+                web que consta de una pagina. Perfecto para presentar a tu
+                empresa, organizacion, producto o servicio de una manera hermosa
+                y moderna en Internet.
+              </p>
+              <a class="fs-4 fw-bold" href="contacto.html">
+                Solicite una cotizacion ahora
+                <i class="bi bi-chevron-compact-right"></i>
+              </a>
+              <div class="row mt-5">
+                <div class="col">
+                  <p>
+                    <i class="bi bi-check-lg"></i>Sitio web de una sola pagina
+                  </p>
+                  <p><i class="bi bi-check-lg"></i>100% responsivo</p>
+                  <p><i class="bi bi-check-lg"></i>Diseño personalizado</p>
+                </div>
+                <div class="col">
+                  <p><i class="bi bi-check-lg"></i>Correccion de estilo</p>
+                  <p><i class="bi bi-check-lg"></i>Edicion de imagenes</p>
+                  <p><i class="bi bi-check-lg"></i>Soporte</p>
+                </div>
+              </div>
+            </article>
+          </div>
+        </article>
+      </section>
+      <section
+        id="multi-page"
+        class="min-vh-100 bg-hero-image"
+        style="--bg-image: url(../img/site-multipage.jpg)"
+      >
+        <article class="bg-alpha-color min-vh-100 d-flex align-items-center">
+          <div class="container">
+            <article class="col-12 col-lg-6">
+              <a
+                href="contacto.html"
+                class="btn btn-lg btn-success text-white mb-5"
+              >
+                <b>Desde $1000 <small>USD</small></b>
+              </a>
+              <h2>Sitio multipagina</h2>
+              <small>
+                El precio puede ser mas bajo (o mas alto) dependiendo de los
+                requisitos de su proyecto.
+              </small>
+              <p my-5 fs-5>
+                un <b>sitio web de varias paginas</b> consta de dos o mas paginas. Este
+                formato es util si tiene ciertos elementos que desea mantener
+                separados por paginas y urls diferentes.
+              </p>
+              <a class="fs-4 fw-bold" href="contacto.html">
+                Solicite una cotizacion ahora
+                <i class="bi bi-chevron-compact-right"></i>
+              </a>
+              <div class="row mt-5">
+                <div class="col">
+                  <p>
+                    <i class="bi bi-check-lg"></i>2 a 6 paginas
+                  </p>
+                  <p><i class="bi bi-check-lg"></i>100% responsivo</p>
+                  <p><i class="bi bi-check-lg"></i>Diseño personalizado</p>
+                </div>
+                <div class="col">
+                  <p><i class="bi bi-check-lg"></i>Correccion de estilo</p>
+                  <p><i class="bi bi-check-lg"></i>Edicion de imagenes</p>
+                  <p><i class="bi bi-check-lg"></i>Soporte</p>
+                </div>
+              </div>
+            </article>
+          </div>
+        </article>
+      </section>
     </main>
 
     <footer class="bg-dark p-3 fixed-bottom">
