--- a/comencemos.html
+++ b/comencemos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Studio BAD DOG</title>
+    <title>Comencemos tu nuevo proyecto</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -43,9 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-lg-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Inicio</a
-              >
+              <a class="nav-link" href="index.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -79,7 +77,12 @@
               <a class="nav-link" href="clientes.html">Clientes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="comencemos.html">Comencemos</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="comencemos.html"
+                >Comencemos</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contacto.html">Interesado?</a>
@@ -89,11 +92,141 @@
       </div>
     </nav>
 
-    <main class="pt-5">
-      <h1>Seccion Comencemos</h1>
+    <main class="py-5 bg-color">
+      <div class="container">
+        <article class="text-center">
+          <h1>Comencemos tu nuevo proyecto</h1>
+          <p class="fs-5">
+            Me encanta la colaboracion mutua entre <b>profesional-cliente</b>,
+            prefiero la frase:
+          </p>
+          <p class="fs-3">
+            <b><i>"Trabajo con vos"</i></b>
+          </p>
+          <p class="fs-5">En vez de: <b>trabajo para vos</b></p>
+          <p class="text-start">
+            Me gusta tener contacto directo con el cliente, lo que permite una
+            comunicacion clara y actualizaciones periodicas del proyecto,
+            haciendo todo lo posible para no causar demoras. Intento definir las
+            caracteristicas y experiencias mas adecuadas que brinden la maxima
+            satisfaccion.
+          </p>
+          <p class="text-start">
+            Me parece importante ofrecer a mis clientes una comprension clara de
+            lo que pueden y deben esperar de mi. Si trabajamos juntos en tu
+            sitio web, el proceso sera como se describe a continuacion:
+          </p>
+        </article>
+        <section class="row align-items-lg-center">
+          <article class="col-12 col-lg-6 text-lg-end">
+            <h2>Paso 1</h2>
+            <h3>Concepto y Presupuesto</h3>
+            <p>
+              Discutimos las primeras ideas durante una breve reunion en la
+              oficina, por correo electronico o videollamada. Siguiendo las
+              ideas iniciales, te presentare un presupuesto oficial para el
+              proyecto.
+            </p>
+          </article>
+          <article class="col-12 col-lg-6">
+            <img
+              src="./img/workflow-step-1.png"
+              alt="paso 1:concepto y presupuesto"
+            />
+          </article>
+        </section>
+        <section class="row align-items-lg-center">
+          <article class="col-12 col-lg-6 order-lg-1">
+            <h2>Paso 2</h2>
+            <h3>Propuesta de diseño</h3>
+            <p>
+              Una vez que se firme y/o acepte la cotización, recibirás la
+              primera factura (50% del monto total acordado). Después del pago
+              iniciaré el proyecto. Estudiaré tu empresa, producto o servicio.
+              Para acelerar el proceso, es necesario que me entregues todo el
+              material del proyecto en este momento (Logo, Textos, Fotos, Mapa
+              del sitio, etc.). En 7 días te presentaré un diseño profesional y
+              apropiado para tu sitio web.
+            </p>
+          </article>
+          <article class="col-12 col-lg-6">
+            <img
+              src="./img/workflow-step-2.png"
+              alt="paso 1:concepto y presupuesto"
+            />
+          </article>
+        </section>
+        <section class="row align-items-lg-center">
+          <article class="col-12 col-lg-6">
+            <h2>Paso 3</h2>
+            <h3>Retroalimentacion</h3>
+            <p>
+              Después de la primera presentación del diseño, puedes dar tu
+              opinión y compartir comentarios. Tendrás un máximo de 2 rondas de
+              comentarios<sup class="text-first-color fw-bold">*</sup>. De esta
+              manera no nos detenemos en un círculo sin fin de cambios menores.
+              Esto evita perder tiempo y presupuesto. Es importante compartir
+              buenos comentarios.
+            </p>
+          </article>
+          <article class="col-12 col-lg-6">
+            <img
+              src="./img/workflow-step-3.png"
+              alt="paso 1:concepto y presupuesto"
+            />
+          </article>
+        </section>
+        <section class="row align-items-lg-center">
+          <article class="col-12 col-lg-6 order-lg-1">
+            <h2>Paso 4</h2>
+            <h3>Acabado de Diseño y Contenido</h3>
+            <p>
+              Después de la última ronda de comentarios, haré los cambios
+              finales y terminaré el diseño completamente. En consulta contigo,
+              también se procesa el contenido final, como textos y fotos.
+            </p>
+          </article>
+          <article class="col-12 col-lg-6">
+            <img
+              src="./img/workflow-step-4.png"
+              alt="paso 1:concepto y presupuesto"
+            />
+          </article>
+        </section>
+        <section class="row align-items-lg-center">
+          <article class="col-12 col-lg-6 text-lg-end">
+            <h2>Paso 5</h2>
+            <h3>Fin del proyecto</h3>
+            <p>
+              Dependiendo de la complejidad del proyecto, se terminará de 2 a 8
+              semanas. Una vez finalizado, recibirás la factura final (a menos
+              que se acuerde de otra manera). Después del pago, te enviaré una
+              copia de todos los archivos originales y pondré en línea tu sitio.
+              Después de esta etapa, los cambios menores y los errores se
+              procesarán de forma gratuita. Los cambios mayores tendrán costos
+              adicionales<sup class="text-first-color fw-bold">*</sup>.
+            </p>
+          </article>
+          <article class="col-12 col-lg-6">
+            <img
+              src="./img/workflow-step-5.png"
+              alt="paso 1:concepto y presupuesto"
+            />
+          </article>
+        </section>
+        <article>
+          <p class="text-center m-0">
+            <small
+              ><sup class="text-first-color fw-bold">*</sup> Todo cambio
+              adicional generara cargos extras. Tarifa por hora:
+              <b>150usd + impuestos</b>.</small
+            >
+          </p>
+        </article>
+      </div>
     </main>
 
-    <footer class="bg-dark p-3 fixed-bottom">
+    <footer class="bg-dark p-3">
       <div class="container text-center">
         <nav class="d-flex justify-content-evenly">
           <a href="https://facebook.com" target="_blank"
