--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Studio BAD DOG</title>
+    <title>Contacto Studio BAD DOG</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -43,9 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-lg-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Inicio</a
-              >
+              <a class="nav-link" href="index.html">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -82,18 +80,146 @@
               <a class="nav-link" href="comencemos.html">Comencemos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Interesado?</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="contacto.html"
+                >Interesado?</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <main class="pt-5">
-      <h1>Seccion Contacto</h1>
+    <main class="pt-5 bg-color">
+      <div class="container mb-5">
+        <section class="row">
+          <article class="col-12 text-center">
+            <h1>¿Interesad@?</h1>
+            <p class="fs-5">Enviame tus comentarios!</p>
+            <p class="fs-5">
+              Para mas informacion puedes contactarme en mi
+              <a
+                href="https://www.linkedin.com/in/christiansbustos/"
+                target="_blank"
+                rel="noopener"
+                >LinkedIn</a
+              >
+            </p>
+          </article>
+          <article class="col-12 col-lg-6 order-lg-1">
+            <form
+              action="https://formsubmit.co/christianbus37@gmail.com"
+              method="POST"
+            >
+              <div class="mb-4">
+                <label class="form-label" for="name">Nombre:</label>
+                <input
+                  class="form-control"
+                  id="name"
+                  name="name"
+                  placeholder="Tu nombre"
+                  type="text"
+                  required
+                />
+              </div>
+              <div class="mb-4">
+                <label class="form-label" for="email">Email</label>
+                <input
+                  class="form-control"
+                  id="email"
+                  name="email"
+                  placeholder="Tu correo"
+                  type="email"
+                  required
+                />
+              </div>
+              <div class="mb-4">
+                <label class="form-label" for="comments">Comentarios:</label>
+                <textarea
+                  rows="5"
+                  name="comments"
+                  id="comments"
+                  class="form-control"
+                  placeholder="Dejanos tus comentarios"
+                  required
+                ></textarea>
+              </div>
+              <div class="mb-3">
+                <input type="submit" class="btn btn-lg btn-success" />
+              </div>
+            </form>
+          </article>
+          <article class="col-12 col-lg-6">
+            <div class="ratio ratio-16x9">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d97604.53941949451!2d-71.38202015426911!3d-40.1391237499378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96110e743605d0c7%3A0x71c43ffb1c66bc3a!2sSan%20Mart%C3%ADn%20de%20los%20Andes%2C%20Neuqu%C3%A9n!5e0!3m2!1ses-419!2sar!4v1707335054038!5m2!1ses-419!2sar"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </article>
+        </section>
+      </div>
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-caption bg-second-alpha-color z-1">
+            <article>
+              <aside>
+                <p class="fs-4"><b>Christian Bustos</b></p>
+                <p class="fs-5 d-none d-sm-block">
+                  Desarrollador Frontend Trainee
+                </p>
+              </aside>
+              <aside class="d-none d-md-block">
+                <p>Comence a estudiar desarrollo frontend en 2022</p>
+                <p>Valoro mucho el concepto de <i>menos es mas</i></p>
+                <p>
+                  Puedo trabajar de forma remota como tambien dentro de empresas
+                </p>
+              </aside>
+            </article>
+          </div>
+          <div class="carousel-item active">
+            <img src="./img/about-1.jpg" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="./img/about-2.jpg" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="./img/about-3.jpg" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="./img/about-4.jpg" class="d-block w-100" alt="..." />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </main>
 
-    <footer class="bg-dark p-3 fixed-bottom">
+    <footer class="bg-dark p-3">
       <div class="container text-center">
         <nav class="d-flex justify-content-evenly">
           <a href="https://facebook.com" target="_blank"
