--- a/sitios.html
+++ b/sitios.html
@@ -43,13 +43,14 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-lg-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link"  href="index.html"
                 >Inicio</a
               >
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle active"
+                aria-current="page"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -254,7 +255,7 @@
       </section>
     </main>
 
-    <footer class="bg-dark p-3 fixed-bottom">
+    <footer class="bg-dark p-3">
       <div class="container text-center">
         <nav class="d-flex justify-content-evenly">
           <a href="https://facebook.com" target="_blank"
